--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,3 +9,8 @@ h6 {
   margin: 0;
   font-weight: 300;
 }
+
+html {
+  font-family: Inter, 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
+    'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+}
